--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">MavMatch</string>
+    <string name="app_name"><font color="#F58025">Mav</font><font color="#0064b1">Match</font></string>
 </resources>
