updating all gradle versions, added user view for the home page with placeholder data from firebase and created classes for later use such as events and organizations for the various views the app will have

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name"><font color="#F58025">Mav</font><font color="#0064b1">Match</font></string>
+    <string name="banner_for_event">Banner for event</string>
 </resources>
